# bater

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/bater/: __init__.py  app.py  bater.py  validators.py
